--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -6,7 +6,7 @@
     {% include "theme::partials/metadata" %}
 </head>
 
-<body class="variant-{{ random(8) }}{{ locale().isRtl() ? ' rtl' }} display--{{ preference_value('visiosoft.theme.puredash::display', 'default') }} sidebars--{{ preference_value('visiosoft.theme.puredash::sidebars', 'default') }}"
+<body class="variant-{{ random(8) }}{{ locale().isRtl() ? ' rtl' }} display--default sidebars--default"
       data-variants="8">
 
 {#{% include "theme::partials/push" %}#}
