--- a/resources/views/partials/sidebar.twig
+++ b/resources/views/partials/sidebar.twig
@@ -1,4 +1,4 @@
-<aside id="sidebar" class="scrollbar {{ preference_value('visiosoft.theme.puredash::sidebar_hover', setting_value('visiosoft.theme.puredash::sidebar_hover')) ? 'hover' }}">
+<aside id="sidebar" class="scrollbar ">
 
     <ul>
         {% for key, navigation in template.cp.navigation %}
